RESOLVED FIXED159240
AX: Crash in WebCore::Document::focusNavigationStartingNode(WebCore::FocusDirection) const + 128
https://bugs.webkit.org/show_bug.cgi?id=159240
Summary AX: Crash in WebCore::Document::focusNavigationStartingNode(WebCore::FocusDir...
Nan Wang
Reported 2016-06-28 17:29:37 PDT
0 com.apple.WebCore 0x0000000107ea38dc WebCore::Node::previousSibling() const + 12 (Node.h:150) 1 com.apple.WebCore 0x0000000107eb2fc9 WebCore::NodeTraversal::previous(WebCore::Node const&, WebCore::Node const*) + 25 (NodeTraversal.h:123) 2 com.apple.WebCore 0x0000000108554729 WebCore::Traversal<WebCore::Element>::previous(WebCore::Node const&) + 25 (ElementTraversal.h:177) 3 com.apple.WebCore 0x0000000108554639 WebCore::Document::focusNavigationStartingNode(WebCore::FocusDirection) const + 281 (Document.cpp:3946) 4 com.apple.WebCore 0x00000001087faf4d WebCore::FocusController::advanceFocusInDocumentOrder(WebCore::FocusDirection, WebCore::KeyboardEvent*, bool) + 77 (FocusController.cpp:433) 5 com.apple.WebCore 0x00000001087fae9c WebCore::FocusController::advanceFocus(WebCore::FocusDirection, WebCore::KeyboardEvent*, bool) + 108 (FocusController.cpp:415) 6 com.apple.WebCore 0x00000001087fadba WebCore::FocusController::setInitialFocus(WebCore::FocusDirection, WebCore::KeyboardEvent*) + 58 (FocusController.cpp:399) <rdar://problem/27018893>
Attachments
Initial patch (4.73 KB, patch)
2016-06-28 17:41 PDT, Nan Wang
buildbot: commit-queue-
Archive of layout-test-results from ews126 for ios-simulator-wk2 (928.70 KB, application/zip)
2016-06-28 21:35 PDT, Build Bot
no flags
patch (5.46 KB, patch)
2016-06-28 21:45 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-06-28 17:41:18 PDT
Created attachment 282305 [details] Initial patch
Build Bot
Comment 2 2016-06-28 21:35:54 PDT
Comment on attachment 282305 [details] Initial patch Attachment 282305 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1592254 New failing tests: fast/events/remove-focus-navigation-starting-point-crash.html
Build Bot
Comment 3 2016-06-28 21:35:58 PDT
Created attachment 282316 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Nan Wang
Comment 4 2016-06-28 21:45:28 PDT
Created attachment 282317 [details] patch Ignore the test on iOS.
Ryosuke Niwa
Comment 5 2016-06-28 22:09:45 PDT
Please set r? flag once you think it's ready for a review.
WebKit Commit Bot
Comment 6 2016-06-29 14:23:52 PDT
Comment on attachment 282317 [details] patch Clearing flags on attachment: 282317 Committed r202647: <http://trac.webkit.org/changeset/202647>
WebKit Commit Bot
Comment 7 2016-06-29 14:23:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.