AX: Crash in WebCore::Document::focusNavigationStartingNode(WebCore::FocusDirection) const + 128 https://bugs.webkit.org/show_bug.cgi?id=159240

Reviewed by Ryosuke Niwa.

Source/WebCore:

This crash is caused by passing an empty node to ElementTraversal::previous(Node&). When the
focusNavigationStartingNode has been removed and it has no next sibling, we should fallback
to itself for calculating the next focused element.

Test: fast/events/remove-focus-navigation-starting-point-crash.html

* dom/Document.cpp:
(WebCore::Document::focusNavigationStartingNode):

LayoutTests:

* fast/events/remove-focus-navigation-starting-point-crash-expected.txt: Added.
* fast/events/remove-focus-navigation-starting-point-crash.html: Added.
* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/177391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202647 268f45cc-cd09-0410-ab3c-d52691b4dbfc